--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,51 @@
-<h1>Example App: Saved</h1>
+{{!-- NAV BAR --}}
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">News Scraper</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active">
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/saved">Saved Articles</a>
+            </li>
+            <li>
+                <a class="btn btn-danger scrape-new">SCRAPE NEW ARTICLES</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+{{!-- JUMBOTRON --}}
+<div class="jumbotron text-center">
+    <div class="overlay"></div>
+    <div class="background-image"></div>
+    <div class="caption">
+        <h1>News Scraper</h1>
+        <p>Something-or-other Edition</p>
+    </div>
+</div>
+
+{{!-- Article Container --}}
+<div class="container-fluid article-container"></div>
+
+{{!-- FOOTER --}}
+<footer class="footer">
+    <div class="container">
+        <p>Mongo News Scraper</p>
+    </div>
+</footer>
+
+{{!-- JS SCRIPT --}}
+{{!-- jQUERY --}}
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+{{!-- BOOTSTRAP  --}}
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+  crossorigin="anonymous"></script>
+{{!-- CUSTOM JAVASCRIPT --}}
+  <script src="../public/assets/javascript/index.js"></script>
