--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>News Scraper</title>
+    <link rel="stylesheet" type="text/css" href="../../public/assets/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../public/assets/css/style.css">
 </head>
 <body>
  
