add functionality to webscraper

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">News Scraper</a>
+            <a class="navbar-brand" href="/">Mongo News Scraper</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active">
@@ -22,8 +22,8 @@
     <div class="overlay"></div>
     <div class="background-image"></div>
     <div class="caption">
-        <h1>News Scraper</h1>
-        <p>Something-or-other Edition</p>
+        <h1>Mongo News Scraper</h1>
+        <p>Rolling Stone Edition</p>
     </div>
 </div>
 
