--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -34,15 +34,6 @@
     </div>
 </footer>
 
-{{!-- JS SCRIPT --}}
-{{!-- jQUERY --}}
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-{{!-- BOOTSTRAP  --}}
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-  crossorigin="anonymous"></script>
-{{!-- CUSTOM JAVASCRIPT --}}
-  <script src="../public/assets/javascript/saved.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> 
+<script src="../../assets/javascript/saved.js"></script>
